Quick settings: add keyboard brightness control
As reported in gnome-control-center#1530 (closed) , GNOME doesn't currently expose a control for changing keyboard backlight brightness. In most cases, this isn't too big a problem, because the keyboard itself allows the brightness to be changed. However, this isn't universal.
Quick settings is the most appropriate place to expose the keyboard brightness setting, since keyboard brightness is typically something that you quickly want to change without changing focus.
Initial designs can be found here.