power: Expose number of supported steps for backlight

Keyboard backlights are usually much more restricted than screen
brightness, with a lot fewer possible steps. If that's the case,
it makes sense for a UI to present discrete steps rather than a
range/scale.

Make this possible by exposing a "Steps" property on the keyboard
brightness interface.

https://gitlab.gnome.org/GNOME/gnome-shell/-/issues/6765